--- a/Codigo/historico.html
+++ b/Codigo/historico.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="pt">
 
-  <head>
-  <title>Digitavac - Histórico</title>
-  <link rel="icon" href="imagens/negativo.png">
-  <meta charset="utf-8">
-  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"> -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<head>
+	<title>Digitavac - Histórico</title>
+	<link rel="icon" href="imagens/negativo.png">
+	<meta charset="utf-8">
+	<!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"> -->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+	 crossorigin="anonymous">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js">
+	</script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js">
+	</script>
 
 
 
-  <link rel="stylesheet" type="text/css" href="css/style.css">
-  
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 
-<!-- Menu do topo --> 
-      <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #41679B;">
-  
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <img src="imagens/logoneg.png" style="width: 30%">
+
+	<!-- Menu do topo -->
+	<nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #41679B;">
+
+		<div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<img src="imagens/logoneg.png" style="width: 30%">
       </li>
     </ul>
     </div>
@@ -57,7 +61,7 @@
 
 <body>
   <br><br><br><br>
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cad-modal">
+  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#edit-modal">
 Adicionar  </button>
 
 <br><br><br>
@@ -183,8 +187,11 @@ Editar  </button>
       </div>
     </div>
   </div>
+    <!-- fim do modal cadastro -->
 
-  <!-- fim do modal cadastro -->
+
+<script src="js/historicoVac.js"></script>
+</body>
 
 
  <br><br><br>
