--- a/Codigo/config.html
+++ b/Codigo/config.html
@@ -2,83 +2,75 @@
 <html lang="pt">
 
   <head>
-  <title>Digitavac - Configurações</title>
+  <title>Digitavac - cadastro</title>
   <link rel="icon" href="imagens/negativo.png">
   <meta charset="utf-8">
-  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"> -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"> 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  
 
+  <script>
+      onload = () =>{
+          prencherValores();
+      }
+  </script>
 <!-- Menu do topo --> 
       <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #41679B;">
-  
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
         <img src="imagens/logoneg.png" style="width: 30%">
       </li>
+      <li class="nav-item">
+      <a type="button" class="btn btn-light" href="login.html">Login</a>
+      </li>
     </ul>
     </div>
-
-    <div style:"right:0;">
-  <div class="row">
-    <div class="col-sm">
-<a class="nav-link" href="home.html">Home</a>
-    </div>
-    <div class="col-sm">
-<a class="nav-link" href="historico.html">Histórico</a>
-    </div>
-    <div class="col-sm">
-<a class="nav-link" href="config.html"><strong>Configurações</strong></a>
-    </div>
-    <div class="col-sm">
-<a class="nav-link" href="login.html">Sair</a>
-    </div>
-
-  </div>
-</div>
-      
 </nav>
 </head>
 
 <body>
-  <br><br><br><br>
+  <br><br><br>
+  
 
-
-<div class="container-fluid bg_cadastro">
-  <div class="row">
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
-      <div class="col-md-12 text-center">
-        <h2 style="margin-bottom: 50px;">Suas Configurações</h2>
-      </div>
-      <form name="cadastro" class="form-group cadastro">
-        <p class="lbl_cadastro">Email</p>
-        <input type="email" name="email" placeholder="Email" class="form-control box shadow-sm" required>
-        <p class="lbl_cadastro">Nome</p>
-        <input type="text" name="nome" placeholder="Nome" class="form-control box shadow-sm" required>
-        <p class="lbl_cadastro">Senha</p>
-        <input type="password" name="senha" placeholder="Senha" class="form-control box shadow-sm" required>
-        <p class="lbl_cadastro">Notificações</p>
-<input type="checkbox" id="geral" name="geral">
-  <label for="geral">Campanhas de vacinação gerais</label><br>
-<input type="checkbox" id="geral" name="geral">
-  <label for="geral">Campanhas de vacinação para você</label><br>
-  <input type="checkbox" id="geral" name="geral">
-  <label for="geral">Próximas vacinas</label><br>
+  <div class="container-fluid bg_cadastro">
+    <div class="row">
+      <div class="col-md-4"></div>
+      <div class="col-md-4">
         <div class="col-md-12 text-center">
-          <a href="config.html" type="button" class="btn btnnovo shadow" style="margin-bottom: 100px;">Salvar</a>
+          <h2 style="margin-bottom: 50px;">Edite sua conta</h2>
         </div>
-      </form>
+        <form name="cadastro" class="form-group cadastro">
+          <p class="lbl_cadastro">Email</p>
+          <input type="email" id="email" name="email" placeholder="Email" class="form-control box shadow-sm" required>
+          <div id="msgEmail"></div>
+          <p class="lbl_cadastro">Nome</p>
+          <input type="text" id="nome" name="nome" placeholder="Nome" class="form-control box shadow-sm" required>
+          <p class="lbl_cadastro">Nova senha</p>
+          <input type="password" id="newsenha1" name="senha" placeholder="Senha" class="form-control box shadow-sm" required><br>
+          <p class="lbl_cadastro">Confirmar nova senha</p>
+          <input type="password" id="newsenha2" name="senha" placeholder="Senha" class="form-control box shadow-sm" required><br>
+          <div id="msgNewSenha2"></div>
+          <div class="col-md-12 text-center">
+            <a href="#" onclick="regravar(event)" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Salvar</a>
+            <a href="#" onclick="excluir(event)" type="button" class="btn btn-light shadow" style="margin-bottom: 100px;">Excluir</a>
+
+          </div>
+        </form>
+      </div>
+      <div class="col-md-4"></div>
     </div>
-    <div class="col-md-4"></div>
-  </div>
-</div><br><br><br>
+  </div><br><br><br>
 
+ <footer class="container-fluid" style="background-color: #41679B">
 
-  <footer>
-
-      <br>
-        <center><p>&copy DigitaVac 2021</p></center>
+      <div class="footer-sm">
+        <p>&copy DigitaVac 2021</p>
+      </div>
   </footer>
+
+  <script type='text/javascript' src="js/cadastro.js"></script>
+</body>
