--- a/Codigo/historico.html
+++ b/Codigo/historico.html
@@ -19,6 +19,36 @@
 
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+<script src="login.js"></script>
+    <script>
+        if (!usuarioAtual.id) {
+            window.location.href = LLink;
+            alert ("Faça login para continuar!");
+        }
+
+        function exibe() {
+            
+            let listaUsuarios = '';
+            for (i = 0; i < db_user.user.length; i++) {
+                let usuario = db_user.user[i];
+                listaUsuarios += `<tr><td scope="row">${usuario.nome}</td><td>${usuario.login}</td><td>${usuario.email}</td></tr>`;
+            }
+
+
+            document.getElementById("table-usuario").innerHTML = listaUsuarios
+
+
+        }
+
+        function initPage() {
+
+            document.getElementById('btn_logout').addEventListener('click', logoutUser);
+
+            exibe();
+        }
+
+        window.addEventListener('load', initPage);
+    </script>
 
 
 	<!-- Menu do topo -->
@@ -44,7 +74,7 @@
 <a class="nav-link" href="config.html">Configurações</a>
     </div>
     <div class="col-sm">
-<a class="nav-link" href="login.html">Sair</a>
+<a class="nav-link" id="btn_logout">Sair</a>
     </div>
 
   </div>
