--- a/Codigo/config.html
+++ b/Codigo/config.html
@@ -14,21 +14,66 @@
           prencherValores();
       }
   </script>
+    
+    <script src="login.js"></script>
+    <script>
+        if (!usuarioAtual.id) {
+            window.location.href = LLink;
+            alert ("Faça login para continuar!");
+        }
+
+        function exibe() {
+            
+            let listaUsuarios = '';
+            for (i = 0; i < db_user.user.length; i++) {
+                let usuario = db_user.user[i];
+                listaUsuarios += `<tr><td scope="row">${usuario.nome}</td><td>${usuario.login}</td><td>${usuario.email}</td></tr>`;
+            }
+
+
+            document.getElementById("table-usuario").innerHTML = listaUsuarios
+
+
+        }
+
+        function initPage() {
+
+            document.getElementById('btn_logout').addEventListener('click', logoutUser);
+
+            exibe();
+        }
+
+        window.addEventListener('load', initPage);
+    </script>
 <!-- Menu do topo --> 
-      <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #41679B;">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <img src="imagens/logoneg.png" style="width: 30%">
-      </li>
-      <li class="nav-item">
-      <a type="button" class="btn btn-light" href="login.html">Login</a>
+        <nav id="navbar" class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: #41679B;">
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <img src="imagens/logoneg.png" style="width: 30%">
       </li>
     </ul>
     </div>
+
+    <div style:"right:0;">
+  <div class="row">
+    <div class="col-sm">
+<a class="nav-link" href="home.html">Home</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="historico.html"><strong>Histórico</strong></a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" href="config.html">Configurações</a>
+    </div>
+    <div class="col-sm">
+<a class="nav-link" id="btn_logout">Sair</a>
+    </div>
+
+  </div>
+</div>
+
 </nav>
 </head>
 
