--- a/Codigo/historico.html
+++ b/Codigo/historico.html
@@ -182,7 +182,7 @@
         <!-- Modal footer -->
         <div class="modal-footer">
           <button type="button" onclick="deleteData(event)" id="btn-exc" class="btn btn-danger">Excluir</button>
-          <button type="button" id="btn-save" class="btn btn-success">Salvar</button>
+          <button type="button" onclick="editData(event)" id="btn-save" class="btn btn-success">Salvar</button>
         </div>
 
       </div>
