--- a/Codigo/home.html
+++ b/Codigo/home.html
@@ -8,38 +8,6 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous"> 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/style.css">
-  
-<script src="login.js"></script>
-    <script>
-        if (!usuarioAtual.id) {
-            window.location.href = LLink;
-            alert ("Faça login para continuar!");
-        }
-
-        function exibe() {
-            
-            let listaUsuarios = '';
-            for (i = 0; i < db_user.user.length; i++) {
-                let usuario = db_user.user[i];
-                listaUsuarios += `<tr><td scope="row">${usuario.nome}</td><td>${usuario.login}</td><td>${usuario.email}</td></tr>`;
-            }
-
-
-            document.getElementById("table-usuario").innerHTML = listaUsuarios
-
-
-        }
-
-        function initPage() {
-
-            document.getElementById('btn_logout').addEventListener('click', logoutUser);
-
-            exibe();
-        }
-
-        window.addEventListener('load', initPage);
-    </script>
-
 
 
 <!-- Menu do topo --> 
@@ -65,8 +33,7 @@
 <a class="nav-link" href="config.html">Configurações</a>
     </div>
     <div class="col-sm">
-
-<a class="nav-link" id="btn_logout">Sair</a>
+<a class="nav-link" type="button" onclick="logoutUser(event)" id="btn_logout" style="color: white;">Sair</a>
     </div>
 
   </div>
@@ -75,7 +42,31 @@
 </nav>
 </head>
 
+<script src="js/login.js"></script>
+<script>
+        if (!usuarioAtual.id) {
+            window.location.href = LLink;
+            alert ("Faça login para continuar!");
+        }
+
+        function exibe() {
+            
+            let listaUsuarios = '';
+            for (i = 0; i < db_user.user.length; i++) {
+                let usuario = db_user.user[i];
+                listaUsuarios += `<tr><td scope="row">${usuario.nome}</td><td>${usuario.login}</td><td>${usuario.email}</td></tr>`;
+            }
+
+
+            document.getElementById("table-usuario").innerHTML = listaUsuarios
+
+
+        }
+
+    </script>
+
 <body>
+
   <br><br><br><br><br><br>
   
 <div id="projetos" class="container-fluid">
@@ -87,7 +78,7 @@
 
 
 
-  <footer>
+  <footer style="bottom:0;">
 
       <br>
         <center><p>&copy DigitaVac 2021</p></center>
