--- a/Codigo/historico.html
+++ b/Codigo/historico.html
@@ -19,7 +19,7 @@
 
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-<script src="login.js"></script>
+<script src="js/login.js"></script>
     <script>
         if (!usuarioAtual.id) {
             window.location.href = LLink;
@@ -40,14 +40,6 @@
 
         }
 
-        function initPage() {
-
-            document.getElementById('btn_logout').addEventListener('click', logoutUser);
-
-            exibe();
-        }
-
-        window.addEventListener('load', initPage);
     </script>
 
 
@@ -73,8 +65,8 @@
     <div class="col-sm">
 <a class="nav-link" href="config.html">Configurações</a>
     </div>
-    <div class="col-sm">
-<a class="nav-link" id="btn_logout">Sair</a>
+     <div class="col-sm">
+<a class="nav-link" type="button" onclick="logoutUser(event)" id="btn_logout" style="color: white;">Sair</a>
     </div>
   </nav>
 </head>
